--- a/css/style.css
+++ b/css/style.css
@@ -821,14 +821,15 @@ table tbody th {
 	/*margin-right:2%;*/
 }
 
-.session_chair img{
+.session_chair_imgbox {
 	width: 80px;
 	height:80px;
 	border-radius: 50%;
-    -moz-border-image: border-radius: 50%;
-    -webkit-border-image: border-radius: 50%;
-	display:block;
+	-moz-border-image: border-radius: 50%;
+	-webkit-border-image: border-radius: 50%;
 	margin:0 auto;
+	background:url(../img/nai_toki.jpg) center center;
+	background-size:cover;
 }
 
 span.name_txt{
@@ -967,7 +968,7 @@ input[type="radio"]{display:none;}
 .panel_area{background:#ffffff; border-bottom-right-radius:10px; border-bottom-left-radius:10px; border-top:8px solid #d7e9ea;}
 .tab_panel{width:100%; padding:40px 0; display:none;}
 .tab_panel p{font-size:14px; letter-spacing:1px; text-align:center;}
- 
+
 #tab1:checked ~ .tab_area .tab1_label{background:#d7e9ea; color:#000;}
 #tab1:checked ~ .panel_area #panel1{display:block;}
 #tab2:checked ~ .tab_area .tab2_label{background:#d7e9ea; color:#000;}
@@ -1045,7 +1046,7 @@ input[type="radio"]{display:none;}
     font-weight: bold;
 }
 .box26 p {
-    /*margin: 0;*/ 
+    /*margin: 0;*/
     padding: 0;
 	font-size:14px;
 }
@@ -1136,7 +1137,7 @@ p.event-date-col{
 		align-items: center;
 		height: 100%;
 	}
-	
+
 	.mv_elements_wrap{
 		display: table-cell;
 		/*flex-direction: column;*/
@@ -1146,20 +1147,20 @@ p.event-date-col{
 		text-align:center;
 		margin:0 auto;
 	}
-	
+
 	.mv_elements_wrap .mv_text{
 		margin:auto;
 	}
-	
+
 	p.event-name-col , p.event-date-col{
 		display:block;
 		text-align:center;
 	}
-	
+
 	p.event-name-row , p.event-date-row{
 		display:none;
 	}
-	
+
 }
 
 @media (max-width: 991px) {
@@ -1169,7 +1170,7 @@ p.event-date-col{
 		align-items: center;
 		height: 100%;
 	}
-	
+
 	.mv_elements_wrap{
 		display: table-cell;
 		/*flex-direction: column;*/
@@ -1179,11 +1180,11 @@ p.event-date-col{
 		text-align:center;
 		margin:0 auto;
 	}
-	
+
 	p.event-name-col , p.event-date-col{
 		display:none;
 	}
-	
+
 	p.event-name-row{
 		display:block;
 		margin-bottom:10px;
@@ -1333,7 +1334,7 @@ p.event-date-col{
 
 /*トップページセクションタイトル装飾*/
 .container{
-	position:relative;	
+	position:relative;
 }
 
 .hata{
@@ -1361,7 +1362,7 @@ p.event-date-col{
 
 @media (max-width: 500px) {
 .hata{
-	display:none;	
+	display:none;
 }
 .hata_s{
 	display:block;
