--- a/css/style.css
+++ b/css/style.css
@@ -1129,6 +1129,11 @@ p.event-date-col{
 	font-weight:800;
 }
 
+p.app_dl{
+	text-align:left;
+	margin-top:30px;
+	margin-block-end:0;
+}
 
 @media (max-width: 1199px){
 	.mv_elements{
@@ -1161,6 +1166,11 @@ p.event-date-col{
 		display:none;
 	}
 
+	p.app_dl{
+		text-align:center;
+		margin:20px auto 20px;
+		margin-block-end:40px;
+	}
 }
 
 @media (max-width: 991px) {
