--- a/assets/style.css
+++ b/assets/style.css
@@ -36,6 +36,7 @@ p.intro {
 }
 a {
 	color: #8eb640;
+  cursor: pointer;
 }
 a:hover, a:focus {
 	text-decoration: none;
@@ -1210,8 +1211,9 @@ p.app_dl{
 }
 
 /*トップページセクションタイトル装飾*/
-.container{
-	position:relative;
+.container {
+  position: relative;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 .hata{
