--- a/assets/style.css
+++ b/assets/style.css
@@ -150,19 +150,15 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	margin-bottom: 10px;
 }
 .btn-custom {
-	text-transform: uppercase;
 	color: #fff;
 	background-color: #2f94a9;
-	/*background-color: #72a411;*/
 	border: 0;
 	padding: 20px 20px;
-	/*padding: 14px 20px;*/
-	margin: 0;
+	margin: 20px 0 0;
 	font-size: 16px;
 	font-weight: 500;
 	letter-spacing: 0.5px;
 	border-radius: 0;
-	margin-top: 20px;
 	transition: all 0.5s;
 	position:relative;
 }
